--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-#baseurl: "/notebook" # the subpath of your site, e.g. /blog used for deployment
-baseurl: "" # uncomment for dev
+baseurl: "/notebook" # the subpath of your site, e.g. /blog used for deployment
+#baseurl: "" # uncomment for dev
 url: "http://dfarice.com" # the base hostname & protocol for your site
 
 # Build settings
